tests/neg/i5032b.scala
class a@
class b@ // error
